# Maths-Problems

./: CMakeLists.txt  countdigits.cpp  factorial.cpp  primefactor.cpp  template.cpp  trailingzerosoffactorial.cpp
GFG/: PrimeNumber.cpp  README.md  absolutevalue.cpp  celsiustofarenheit.cpp  digitsinfactorial.cpp  exactly3divisors.cpp  fullyprime.cpp  gpterm.cpp  qudraticroots.cpp  sumofprime.cpp
LEETCODE/: gcdofarray.cpp  numberofstepstoreducetozero.cpp  sumofdigitsofbasek.cpp
